@@ -11,7 +11,7 @@
   statistic.
 }
 \usage{
-sweep(x, MARGIN, STATS, FUN="-", \dots)
+sweep(x, MARGIN, STATS, FUN="-", check.margin=TRUE, \dots)
 }
 \arguments{
   \item{x}{an array.}
@@ -22,7 +22,18 @@ sweep(x, MARGIN, STATS, FUN="-", \dots)
     case of binary operators such as \code{"/"} etc., the function name
     must backquoted or quoted. (\code{FUN} is found by a call to
     \code{\link{match.fun}}.)}
+  \item{check.margin}{logical.  If \code{TRUE} (the default), warn if the
+    length or dimensions of \code{STATS} do not match the specified
+    dimensions of \code{x}.  Set to \code{FALSE} for a small speed gain
+    when you \emph{know} that dimensions match.}
   \item{\dots}{optional arguments to \code{FUN}.}
+}
+\details{
+  The consistency check among \code{STATS}, \code{MARGIN} and \code{x}
+  is stricter if \code{STATS} is an array than if it is a vector.
+  In the vector case, some kinds of recycling are allowed without a
+  warning. Use \code{sweep(x,MARGIN,as.array(STATS))} if \code{STATS}
+  is a vector and you want to be warned if any recycling occurs.
 }
 \value{
   An array with the same shape as \code{x}, but with the summary
@@ -41,6 +52,23 @@ sweep(x, MARGIN, STATS, FUN="-", \dots)
 require(stats) # for median
 med.att <- apply(attitude, 2, median)
 sweep(data.matrix(attitude), 2, med.att)# subtract the column medians
+
+## More sweeping:
+A <- array(1:24, dim = 4:2)
+
+## no warnings in normal use
+sweep(A, 1, 5)
+(A.min <- apply(A, 1, min)) # == 1:4
+sweep(A, 1, A.min)
+sweep(A, 1:2, apply(A, 1:2, median))
+
+## warnings when mismatch
+sweep(A, 1, 1:3)## STATS does not recycle
+sweep(A, 1, 6:1)## STATS is longer
+
+## exact recycling:
+sweep(A, 1, 1:2)## no warning
+sweep(A, 1, as.array(1:2))## warning
 }
 \keyword{array}
 \keyword{iteration}
